--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
+    "@astrojs/sitemap": "^3.7.0",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.14.6",
     "framer-motion": "^12.23.24",
